# zrinyi_osszesites

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json  zrinyi_osszesites.cpp
